# Butterworth-Filter-Design

./: .gitignore  Biquad.cpp  Biquad.h  Butterworth.cpp  Butterworth.h  CMakeLists.txt  LICENSE  README.md  SConstruct  catch.hpp  conv.cpp  conv.hpp  main.cpp  sos2tf.cpp  sos2tf.hpp  tests.cpp  toolchain-arm64.cmake  toolchain-armv7-32b.cmake
Butterwoth Filter Design.xcodeproj/: project.pbxproj
Butterwoth Filter Design.xcodeproj/project.xcworkspace/xcshareddata/: Butterwoth Filter Design.xccheckout
MATLAB/: biquad_coeff_tests.m  butter_boost_cut_tests.m  butter_heq_bandedge_tests.m  butter_heq_tests.m  butter_unit_tests.m  butterworth_heq_unit_tests.txt
tests/: CMakeLists.txt  main-test.cpp  test-butter.cpp  test-conv.cpp
